@@ -1,11 +1,11 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=@includedir@
+includedir=@includedir@/@PACKAGE_TARNAME@
 
-Name: OpenVRML-GL
+Name: @PACKAGE_NAME@-GL
 Description: OpenGL renderer for OpenVRML.
-Version: @VERSION@
-Requires: openvrml = @VERSION@
+Version: @PACKAGE_VERSION@
+Requires: openvrml = @PACKAGE_VERSION@
 Libs: -L${libdir} -lopenvrml-gl @GL_LIBS@
 Cflags: -I${includedir} @GL_CFLAGS@
